--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -17,7 +17,15 @@
 	h1, h2 {
 		font-weight: 600
 	}
+	h1 {
+		@include breakpoint(large) {
+			font-size: 4.5rem;
+		}
+	}
 	h2 {
 		font-size: 2.5rem;
+		@include breakpoint(large) {
+			font-size: 6rem;
+		}
 	}
 }
