--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,6 +1,6 @@
 #hero {
 	padding: 65px 0;
-	background-image: url('../img/albumart.jpg');
+	background-image: linear-gradient(transparent 65%, #020202), url('../img/albumart.jpg');
 	background-position: 50% 50%;
 	background-size: cover;
 	text-align: center;
